[package]
name = "stargaze_lottery"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { version = "0.16.2", features = ["staking"] }
cosmwasm-storage = "0.16.2"
cw-storage-plus = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6.3"
rand_chacha = "0.3.1"
sha2 = "0.10.0"
